--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ h2.indexSlogan{
 }
 
 .imageZoom {
-  position: relative;
+  position: absolute;
   overflow: hidden;
   width: 92%;
   height: 92%;
@@ -376,7 +376,7 @@ h2.indexSlogan{
 }
 
 .partnerImages {
-  position: relative;
+  position: absolute;
   overflow: hidden;
   border: none;
   outline: none;
@@ -396,12 +396,29 @@ h2.indexSlogan{
 
 /* --------- Footer --------- */
 
+section.wrapperfooterIndex {
+  width: 100%;
+  height: 280px;
+  background-color: #9982F6;
+  top: 280%;
+  display: flex;
+  justify-content: center;
+  clear: both;
+  position: absolute;
+  margin-top: 100px;
+}
 
-section.wrapperfooter {
+.wrapperfooterIndex a {
+    color: white;
+    text-shadow: 2px 2px 2px black;
+    text-decoration: none;
+}
+
+section.wrapperfooter{
     width: 100%;
     height: 280px;
     background-color: #9982F6;
-    top: 150%;
+    bottom: 0;
     display: flex;
     justify-content: center;
     clear: both;
@@ -409,7 +426,7 @@ section.wrapperfooter {
     margin-top: 100px;
 }
 
-article.copyright {
+article.copyright{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     font-weight: bold;
@@ -417,13 +434,13 @@ article.copyright {
     position: absolute;
 }
 
-.copyrightlogos img {
+.copyrightlogos img{
     margin-left: 7px;
     width: 19%;
     height: auto;
 }
 
-img.logofooter {
+img.logofooter{
     width: 8%;
     height: auto;
     position: absolute;
@@ -431,7 +448,7 @@ img.logofooter {
     top: 10%;
 }
 
-article.linefooter {
+article.linefooter{
     width: 90%;
     height: 1px;
     position: absolute;
@@ -439,7 +456,7 @@ article.linefooter {
     top: 65%;
 }
 
-.footermenu {
+.footermenu{
     position: absolute;
     top: 20%;
     left: 20%;
@@ -447,7 +464,7 @@ article.linefooter {
     flex-flow: row;
 }
 
-.menutag {
+.menutag{
     position: absolute;
     top: 3%;
     left: 20%;
@@ -455,38 +472,38 @@ article.linefooter {
     text-shadow: 2px 2px 2px black;
 }
 
-.wrapperfooter a {
+.wrapperfooter a{
     color: white;
     text-shadow: 2px 2px 2px black;
     text-decoration: none;
 }
 
-.footermenu ul {
+.footermenu ul{
     width: 30%;
     color: white;
     font-weight: bold;
     text-shadow: 2px 2px 2px black;
 }
 
-.footermenu ul.section1 {
+.footermenu ul.section1{
     margin-right: 20px;
 }
 
-.footermenu ul.section2 {
+.footermenu ul.section2{
     margin-right: 20px;
 }
 
-.footermenu ul {
+.footermenu ul{
     margin: 0;
     padding: 0;
 }
 
-.footermenu li {
+.footermenu li{
     list-style-type: none;
     margin-bottom: 10px;
 }
 
-.latestposttag {
+.latestposttag{
     position: absolute;
     top: 3%;
     left: 45%;
@@ -494,7 +511,7 @@ article.linefooter {
     text-shadow: 2px 2px 2px black;
 }
 
-.latestposts {
+.latestposts{
     position: absolute;
     top: 20%;
     left: 45%;
@@ -505,25 +522,25 @@ article.linefooter {
     text-shadow: 2px 2px 2px black;
 }
 
-.latestposts .insta img {
+.latestposts .insta img{
     height: auto;
     float: left;
     margin-right: 13px;
 }
 
-.latestposts p {
+.latestposts p{
     margin-left: 15px;
     display: block;
     margin: 2px 0 0 0;
 }
 
-.facebook {
+.facebook{
     position: absolute;
     top: 130%;
     left: 0%;
 }
 
-.facebook p {
+.facebook p{
     position: absolute;
     width: 1000%;
     top: 0%;
@@ -535,7 +552,7 @@ article.linefooter {
     font-size: 14px;
 }
 
-.stayconnectedtag {
+.stayconnectedtag{
     position: absolute;
     top: 3%;
     left: 70%;
@@ -543,14 +560,14 @@ article.linefooter {
     text-shadow: 2px 2px 2px black;
 }
 
-.stayconnected {
+.stayconnected{
     position: absolute;
     width: 11%;
     top: 20%;
     left: 70%;
 }
 
-.stayconnected .email {
+.stayconnected .email{
     outline: none;
     border: none;
     background-color: #FFFFFF;
@@ -558,7 +575,7 @@ article.linefooter {
     height: 20px;
 }
 
-.stayconnected .signup {
+.stayconnected .signup{
     float: right;
     margin-top: 20px;
     background-color: #CD5F47;
@@ -569,6 +586,7 @@ article.linefooter {
     font-size: 16px;
     color: white;
 }
+
 
 /* --------- Footer End --------- */
 
@@ -586,7 +604,7 @@ article.linefooter {
     /* background: blue; */
     width: 100%;
     height: 161%;
-    position: absolute;
+    position: relative;
 }
 
 .artistInfo {
