--- a/css/cmscss.css
+++ b/css/cmscss.css
@@ -48,7 +48,7 @@ body, html {
     box-sizing: border-box;
 }
 .content{
-    padding: 10px;
+    margin-left: 13%;
 }
 .welcometxt{
     width: 40%;
@@ -72,7 +72,7 @@ body, html {
     right: 0;
     background-color: #7d5cccd4;
     overflow: hidden;
-    width: 100%;
+    width: 80%;
     height: 0;
     transition: .5s ease;
 }
@@ -262,8 +262,8 @@ form.form1 {
 #overlay {
     position: fixed;
     display: none;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     top: 0;
     left: 0;
     right: 0;
